--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -412,8 +412,6 @@
   "staking.redeemItnRewards.step1.walletsDropdownLabel": "報酬の振込先：",
   "staking.redeemItnRewards.step2.backButtonLabel": "戻る",
   "staking.redeemItnRewards.step2.continueButtonLabel": "報酬の還元を確認する",
-  "staking.redeemItnRewards.step2.finalTotal": "振込総額",
-  "staking.redeemItnRewards.step2.rewardsTotal": "報酬総額",
   "staking.redeemItnRewards.step2.spendingPasswordLabel": "ウォレット送信時パスワード<em>（<b>{walletName}</b>ウォレット）</em>",
   "staking.redeemItnRewards.step2.spendingPasswordPlaceholder": "パスワード",
   "staking.redeemItnRewards.step2.title": "報酬の還元を確認する",
@@ -425,7 +423,7 @@
   "staking.redeemItnRewards.step3.failure.description1NoRewards": "このインセンティブ付きテストネット用ウォレットには報酬がありません。正しいウォレット復元フレーズを入力したか確認してください。",
   "staking.redeemItnRewards.step3.failure.description2InvalidWallet": "入力された復元フレーズに対応するウォレットの報酬は既に還元されています。",
   "staking.redeemItnRewards.step3.failure.description3Generic": "このインセンティブ付きテストネット用ウォレットには報酬がありません。正しいウォレット復元フレーズを入力したか、また、すでに報酬が還元されていないか確認してください。",
-  "staking.redeemItnRewards.step3.success.description": "<b>{walletName}</b>ウォレットに<b>{finalTotal}</b>が振り込まれました。このトランザクションで、<b>{transactionFees}</b>のトランザクション手数料が発生しました。",
+  "staking.redeemItnRewards.step3.success.description": "<b>{walletName}</b>ウォレットに<b>{redeemedRewards}</b>が振り込まれました。このトランザクションで、<b>{transactionFees}</b>のトランザクション手数料が発生しました。",
   "staking.redeemItnRewards.step3.success.downloadPDFButtonLabel": "PDF証明書をダウンロードする",
   "staking.redeemItnRewards.step3.success.openWalletButtonLabel": "ウォレットを開く",
   "staking.redeemItnRewards.step3.success.title": "インセンティブ付きテストネットの報酬は還元されました",
