--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -412,8 +412,6 @@
   "staking.redeemItnRewards.step1.walletsDropdownLabel": "Redeem rewards to:",
   "staking.redeemItnRewards.step2.backButtonLabel": "Back",
   "staking.redeemItnRewards.step2.continueButtonLabel": "Confirm rewards redemption",
-  "staking.redeemItnRewards.step2.finalTotal": "Final total",
-  "staking.redeemItnRewards.step2.rewardsTotal": "Rewards total",
   "staking.redeemItnRewards.step2.spendingPasswordLabel": "Wallet spending password <em>(<b>{walletName}</b> wallet)</em>",
   "staking.redeemItnRewards.step2.spendingPasswordPlaceholder": "Password",
   "staking.redeemItnRewards.step2.title": "Confirm rewards redemption",
@@ -425,7 +423,7 @@
   "staking.redeemItnRewards.step3.failure.description1NoRewards": "No rewards were found in your Incentivized Testnet Rewards wallet. Please make sure that you have entered the correct wallet recovery phrase.",
   "staking.redeemItnRewards.step3.failure.description2InvalidWallet": "Rewards from the wallet corresponding to the recovery phrase you have provided have already been redeemed.",
   "staking.redeemItnRewards.step3.failure.description3Generic": "No rewards were found in your Incentivized Testnet Rewards wallet. Please make sure that you have entered the correct wallet recovery phrase and that rewards have not already been redeemed.",
-  "staking.redeemItnRewards.step3.success.description": "You have successfully redeemed <b>{finalTotal}</b> to your <b>{walletName}</b> wallet. This transaction incurred <b>{transactionFees}</b> in transaction fees.",
+  "staking.redeemItnRewards.step3.success.description": "You have successfully redeemed <b>{redeemedRewards}</b> to your <b>{walletName}</b> wallet. This transaction incurred <b>{transactionFees}</b> in transaction fees.",
   "staking.redeemItnRewards.step3.success.downloadPDFButtonLabel": "Download PDF certificate",
   "staking.redeemItnRewards.step3.success.openWalletButtonLabel": "Open the wallet",
   "staking.redeemItnRewards.step3.success.title": "Incentivized Testnet rewards redeemed!",
