[DDW-345] Translation manager

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -10938,7 +10938,7 @@
         }
       },
       {
-        "defaultMessage": "!!!15 words <em>(Incentivized Testnet wallet)</em>",
+        "defaultMessage": "!!!15 words <em>(Shelley wallet)</em>",
         "description": "Label for the \"labelDaedalusWalletKind15WordShelley\" checkbox.",
         "end": {
           "column": 3,
