--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -4747,16 +4747,30 @@
       },
       {
         "defaultMessage": "!!!You have successfully redeemed <b>{redeemedRewards}</b> to your <b>{walletName}</b> wallet. This transaction incurred <b>{transactionFees}</b> in transaction fees",
-        "description": "description for Redeem Incentivized Testnet - Step 3",
+        "description": "descriptionRewards for Redeem Incentivized Testnet - Step 3",
         "end": {
           "column": 3,
           "line": 25
         },
         "file": "source/renderer/app/components/staking/redeem-itn-rewards/Step3SuccessDialog.js",
-        "id": "staking.redeemItnRewards.step3.success.description",
+        "id": "staking.redeemItnRewards.step3.success.descriptionRewards",
         "start": {
-          "column": 15,
+          "column": 22,
           "line": 20
+        }
+      },
+      {
+        "defaultMessage": "!!!You have successfully redeemed <b>{redeemedRewards}</b> to your <b>{walletName}</b> wallet. This transaction incurred <b>{transactionFees}</b> in transaction fees",
+        "description": "descriptionFees for Redeem Incentivized Testnet - Step 3",
+        "end": {
+          "column": 3,
+          "line": 31
+        },
+        "file": "source/renderer/app/components/staking/redeem-itn-rewards/Step3SuccessDialog.js",
+        "id": "staking.redeemItnRewards.step3.success.descriptionFees",
+        "start": {
+          "column": 19,
+          "line": 26
         }
       },
       {
@@ -4764,13 +4778,13 @@
         "description": "description for Redeem Incentivized Testnet - Step 3",
         "end": {
           "column": 3,
-          "line": 30
+          "line": 36
         },
         "file": "source/renderer/app/components/staking/redeem-itn-rewards/Step3SuccessDialog.js",
         "id": "staking.redeemItnRewards.step3.success.openWalletButtonLabel",
         "start": {
           "column": 25,
-          "line": 26
+          "line": 32
         }
       },
       {
@@ -4778,13 +4792,13 @@
         "description": "description for Redeem Incentivized Testnet - Step 3",
         "end": {
           "column": 3,
-          "line": 35
+          "line": 41
         },
         "file": "source/renderer/app/components/staking/redeem-itn-rewards/Step3SuccessDialog.js",
         "id": "staking.redeemItnRewards.step3.success.downloadPDFButtonLabel",
         "start": {
           "column": 26,
-          "line": 31
+          "line": 37
         }
       }
     ],
