--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -395,6 +395,7 @@
   "staking.redeemItnRewards.noWallets.description": "インセンティブ付きテストネットの還元機能はShelley対応のウォレットがないため利用できません。",
   "staking.redeemItnRewards.step1.checkbox1Label": "インセンティブ付きテストネットで獲得した報酬の還元には、トランザクション手数料を支払う必要があることを理解しました。",
   "staking.redeemItnRewards.step1.checkbox2Label": "手数料は報酬の振込先ウォレットから支払われることを理解しました。",
+  "staking.redeemItnRewards.step1.closeButton.label": "閉じる",
   "staking.redeemItnRewards.step1.continueButton.label": "続ける",
   "staking.redeemItnRewards.step1.description1": "{ itnLink }に参加して、ステークプールの運営またはステークの委任により報酬を獲得した場合、この機能を使用してその報酬をCardanoメインネットでADAに還元することができます。",
   "staking.redeemItnRewards.step1.description2": "報酬を還元するには、報酬の獲得に使用した<b>インセンティブ付きテストネット用ウォレットの復元</b>フレーズと、報酬の振込先となる既存のメインネット用Daedalusウォレットが必要です。このウォレットは、適用されるトランザクション手数料の支払いにも使用されます。",
@@ -406,6 +407,7 @@
   "staking.redeemItnRewards.step1.noResults": "検索結果はありません",
   "staking.redeemItnRewards.step1.recoveryPhraseInputHint": "復元フレーズを入力してください",
   "staking.redeemItnRewards.step1.recoveryPhraseLabel": "ウォレット復元フレーズ：",
+  "staking.redeemItnRewards.step1.redemptionUnavailable": "インセンティブ付きテストネットの報酬を還元するには、Daedalusがブロックチェーンと同期している必要があります。現在同期プロセスは進行中で、<b>{syncPercentage}%</b>完了しています。このプロセスが完了したら、インセンティブ付きテストネットの報酬を還元することができるようになります。ここで報酬を還元するのは、このプロセスが終了するまでお待ちください。",
   "staking.redeemItnRewards.step1.selectWalletInputPlaceholder": "ウォレットを選択してください",
   "staking.redeemItnRewards.step1.title": "インセンティブ付きテストネットの報酬を還元する",
   "staking.redeemItnRewards.step1.walletsDropdownError": "選択されたウォレットには、トランザクション手数料分のADAが不足しています。別のウォレットを選択するか、このウォレットに資金を追加してください。",
