--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -395,6 +395,7 @@
   "staking.redeemItnRewards.noWallets.description": "Redemption of Incentivized Testnet rewards is not available as you currently do not have any Shelley-compatible wallets.",
   "staking.redeemItnRewards.step1.checkbox1Label": "I understand that redeeming rewards from the Incentivized Testnet requires paying transaction fees.",
   "staking.redeemItnRewards.step1.checkbox2Label": "I understand that fees will be paid from the wallet I am redeeming my rewards to.",
+  "staking.redeemItnRewards.step1.closeButton.label": "Close",
   "staking.redeemItnRewards.step1.continueButton.label": "Continue",
   "staking.redeemItnRewards.step1.description1": "If you participated in the { itnLink } and earned rewards by running a stake pool or delegating your stake, you can use this feature to redeem your rewards as ada on the Cardano mainnet.",
   "staking.redeemItnRewards.step1.description2": "You will need the <b>wallet recovery phrase for the Incentivized Testnet wallet</b> used to earn rewards and an existing mainnet wallet in Daedalus to which the rewards will be transferred. This wallet will also be used to pay any applicable transaction fees.",
@@ -406,6 +407,7 @@
   "staking.redeemItnRewards.step1.noResults": "No results",
   "staking.redeemItnRewards.step1.recoveryPhraseInputHint": "Enter recovery phrase",
   "staking.redeemItnRewards.step1.recoveryPhraseLabel": "Wallet recovery phrase:",
+  "staking.redeemItnRewards.step1.redemptionUnavailable": "Before you can redeem your Incentivized Testnet rewards, Daedalus first needs to synchronize with the blockchain. The synchronization process is now underway and is currently <b>{syncPercentage}%</b> complete. As soon as this process is fully complete, you’ll be able to redeem your Incentivized Testnet rewards. Please wait for this process to complete before returning here to redeem your rewards.",
   "staking.redeemItnRewards.step1.selectWalletInputPlaceholder": "Select Wallet",
   "staking.redeemItnRewards.step1.title": "Redeem Incentivized Testnet rewards",
   "staking.redeemItnRewards.step1.walletsDropdownError": "The selected wallet does not have sufficient ada to cover the necessary transaction fees. Please choose another wallet or add more funds to this one.",
